Fixed filters shifting job listings on desktop

--- a/scss/_filter.scss
+++ b/scss/_filter.scss
@@ -12,7 +12,12 @@ $dark: hsl(180, 14%, 20%);
     margin: 0 auto;
     &--visible {
         visibility: visible;
-        margin-bottom: 18px;
+    }
+
+    @media only screen and (max-width: 1024px) {
+        &--visible {
+            margin-bottom: 18px;
+        }
     }
 
     @media only screen and (max-width: 768px) {
