--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,7 +17,12 @@
 
 .filter-container--visible {
   visibility: visible;
-  margin-bottom: 18px;
+}
+
+@media only screen and (max-width: 1024px) {
+  .filter-container--visible {
+    margin-bottom: 18px;
+  }
 }
 
 @media only screen and (max-width: 768px) {
